--- a/index.html
+++ b/index.html
@@ -75,6 +75,11 @@
                     </td>
                 </tr>
                 <tr>
+                    <td colspan="8">
+                        <a href="#teamsize">Teamsize</a>
+                    </td>
+                </tr>
+                <tr>
                     <td><a href="#ajax">AJAX</a></td>
                     <td><a href="#jquery">jQuery</a></td>
                     <td><a href="#json">JSON</a></td>
@@ -86,6 +91,16 @@
                 </tr>
                 <tr>
                     <td><a href="#java">Java</a></td>
+                    <td><a href="#python">Python</a></td>
+                    <td><a href="#postgresql">PostgreSQL</a></td>
+                    <td><a href="#sqlserver">SQL Server</a></td>
+                    <td><a href="#mysql">My SQL</a></td>
+                    <td><a href="#nosql">No SQL</a></td>
+                    <td><a href="#junit">JUnit</a></td>
+                    <td><a href="#selenium">Selenium</a></td>
+                </tr>
+                <tr>
+                    <td><a href="#devops">Devops</a></td>
                     <td><a href="#python">Python</a></td>
                     <td><a href="#postgresql">PostgreSQL</a></td>
                     <td><a href="#sqlserver">SQL Server</a></td>
@@ -668,6 +683,13 @@
 
             </section>
 
+            <section id="teamsize">
+                <h3>Team Size</h3>
+
+                Currently my team is of 8 people, we have two frontend developers, two backend developers, one full-stack developer,
+                one QA engineer, one Devops engineer and one scrum master.
+            </section>
+
             <section id="ajax">
                 <h3>AJAX</h3>
 
@@ -807,6 +829,20 @@
                 developers to interact with web browsers programmatically, performing actions such as clicking buttons, entering text, and navigating through web pages. Selenium supports 
                 multiple programming languages such as Java, Python, C#, and JavaScript, allowing users to write automated tests in their preferred language. It is widely used in software 
                 testing to automate repetitive tasks, perform regression testing, and ensure the functionality and stability of web applications across different browsers and platforms.<br><br>
+            </section>
+
+            <section id="devops">
+                <h3>Devops</h3>
+
+                The goal of devops environment is to streamline the software delivery process, enhance the 
+                quality of software releases and enable faster and more reliable delivery of features and updates to end-users<br><br>
+            </section>
+
+            <section id="micro-frontend">
+                <h3>Micro-frontend</h3>
+
+                The goal of devops environment is to streamline the software delivery process, enhance the 
+                quality of software releases and enable faster and more reliable delivery of features and updates to end-users<br><br>
             </section>
 
             <section>
