--- a/index.html
+++ b/index.html
@@ -13,105 +13,165 @@
         </nav>
 
         <div class="content">
-            <table>
-                <tr>
-                    <td colspan="8">
-                        <a href="#selfintro">Self Introduction</a>
-                    </td>
-                </tr>
-                <tr>
-                    <td><a href="#sdlc">SDLC</a></td>
-                    <td><a href="#angularjs">Angular JS</a></td>
-                    <td><a href="#reactjs">React JS</a></td>
-                    <td><a href="#nextjs">Next JS</a></td>
-                    <td><a href="#html5">HTML 5</a></td>
-                    <td><a href="#css3">CSS 3</a></td>
-                    <td><a href="#js">JavaScript</a></td>
-                    <td><a href="#ts">TypeScript</a></td>
-                </tr>
-                <tr>
-                    <td><a href="#jsts">Difference b/w JavaScript and TypeScript</a></td>
-                    <td><a href="#redux">React Redux</a></td>
-                    <td><a href="#mongodb">MongoDB</a></td>
-                    <td><a href="#nodejs">Node JS</a></td>
-                    <td><a href="#expjs">Express JS</a></td>
-                    <td><a href="#nodeexpress">Difference b/w Node JS and Express JS</a></td>
-                    <td><a href="#jwt">JWT Tokens</a></td>
-                    <td><a href="#dom">DOM</a></td>
-                </tr>
-                <tr>
-                    <td><a href="#spa">Single Page Applicatons(SPAs)</a></td>
-                    <td><a href="#backbonejs">Backbone JS</a></td>
-                    <td><a href="#restfulapis">RESTful APIs</a></td>
-                    <td><a href="#graphql">GraphQL</a></td>
-                    <td><a href="#graphqls">GraphQL Subscriptions</a></td>
-                    <td><a href="#aws">AWS</a></td>
-                    <td><a href="#deveopsjenkins">Setting up DevOps pipelines with Jenkins</a></td>
-                    <td><a href="#tdd">Test-Driven Development</a></td>
-                </tr>
-                <tr>
-                    <td><a href="#cicd">CI/CD Processes</a></td>
-                    <td><a href="#jasmine">Jasmine</a></td>
-                    <td><a href="#jest">Jest</a></td>
-                    <td><a href="#jaje">Difference between Jasmine and Jest</a></td>
-                    <td><a href="#agile">Agile Development Process</a></td>
-                    <td><a href="#git">Git</a></td>
-                    <td><a href="#jira">JIRA</a></td>
-                    <td><a href="#lesssass">Less/Sass</a></td>
-                </tr>
-                <tr>
-                    <td colspan="8">
-                        <a href="#projectdescription">Project Description</a>
-                    </td>
-                </tr>
-                <tr>
-                    <td colspan="8">
-                        <a href="#myrole">Role and Responsibilities</a>
-                    </td>
-                </tr>
-                <tr>
-                    <td colspan="8">
-                        <a href="#challenge">Challenges</a>
-                    </td>
-                </tr>
-                <tr>
-                    <td colspan="8">
-                        <a href="#teamsize">Teamsize</a>
-                    </td>
-                </tr>
-                <tr>
-                    <td><a href="#ajax">AJAX</a></td>
-                    <td><a href="#jquery">jQuery</a></td>
-                    <td><a href="#json">JSON</a></td>
-                    <td><a href="#es6">ES6</a></td>
-                    <td><a href="#babel">Babel</a></td>
-                    <td><a href="#mocha">Mocha</a></td>
-                    <td><a href="#tomcat">Apache Tomcat</a></td>
-                    <td><a href="#ruby">Ruby (Rails)</a></td>
-                </tr>
-                <tr>
-                    <td><a href="#java">Java</a></td>
-                    <td><a href="#python">Python</a></td>
-                    <td><a href="#postgresql">PostgreSQL</a></td>
-                    <td><a href="#sqlserver">SQL Server</a></td>
-                    <td><a href="#mysql">My SQL</a></td>
-                    <td><a href="#nosql">No SQL</a></td>
-                    <td><a href="#junit">JUnit</a></td>
-                    <td><a href="#selenium">Selenium</a></td>
-                </tr>
-                <tr>
-                    <td><a href="#devops">Devops</a></td>
-                    <td><a href="#hooks"></a>Hooks in React</td>
-                    <td><a href="#micro-frontend">Micro Frontend</a></td>
-                    <td><a href="#keys">Keys in React</a></td>
-                    <td><a href="#mysql">My SQL</a></td>
-                    <td><a href="#nosql">No SQL</a></td>
-                    <td><a href="#junit">JUnit</a></td>
-                    <td><a href="#selenium">Selenium</a></td>
-                </tr>
+            <div id="content_div" class="div1">
+                <table>                
+                    <tr>
+                        <td><a href="#selfintro">Self Introduction</a></td>
+                    </tr>  
 
-                
-            </table>
+                    <tr>
+                        <td>
+                            <a href="#projectdescription">Project Description</a>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <a href="#myrole">Role and Responsibilities</a>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <a href="#challenge">Challenges</a>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <a href="#teamsize">Teamsize</a>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <a href="#project2">Project2</a>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <a href="#project3">Project3</a>
+                        </td>
+                    </tr>
+                </table>
+            </div>
+            <div id="content_div" class="div2">
+                <table>
+                    <!-- first category -->
+                    <tr>
+                        <td colspan="6" style="font-weight: bolder; color: aliceblue; font-size: 25px;">Frontend</td>
+                    </tr>
+
+                    <tr>
+                        <td><a href="#angularjs">Angular JS</a></td>
+                        <td><a href="#reactjs">React JS</a></td>
+                        <td><a href="#nextjs">Next JS</a></td>
+                        <td><a href="#html5">HTML 5</a></td>
+                        <td><a href="#css3">CSS 3</a></td>
+                        <td><a href="#redux">React Redux</a></td>
+                    </tr>
+
+                    <tr>
+                        <td><a href="#hooks">Hooks in React</a></td>
+                        <td><a href="#micro-frontend">Micro Frontend</a></td>
+                        <td><a href="#keys">Keys in React</a></td>
+                        <td><a href="#lesssass">Less/Sass</a></td>
+                        <td><a href="#spa">Single Page Applicatons(SPAs)</a></td>
+                    </tr>
+
+
+                    <!-- second category -->
+                    <tr>
+                        <td colspan="6" style="font-weight: bolder; color: aliceblue; font-size: 25px;">Backend</td>
+                    </tr>
+
+                    <tr>
+                        <td><a href="#js">JavaScript</a></td>
+                        <td><a href="#ts">TypeScript</a></td>
+                        <td><a href="#nodejs">Node JS</a></td>
+                        <td><a href="#expjs">Express JS</a></td>
+                        <td><a href="#jwt">JWT Tokens</a></td>
+                        <td><a href="#dom">DOM</a></td>
+                    </tr>
+
+                    <tr>
+                        <td><a href="#backbonejs">Backbone JS</a></td>
+                        <td><a href="#restfulapis">RESTful APIs</a></td>
+                        <td><a href="#graphql">GraphQL</a></td>
+                        <td><a href="#graphqls">GraphQL Subscriptions</a></td>
+                        <td><a href="#ajax">AJAX</a></td>
+                        <td><a href="#jquery">jQuery</a></td>
+                    </tr>
+
+                    <tr>
+                        <td><a href="#json">JSON</a></td>
+                        <td><a href="#es6">ES6</a></td>
+                        <td><a href="#babel">Babel</a></td>
+                        <td><a href="#tomcat">Apache Tomcat</a></td>
+                        <td><a href="#ruby">Ruby (Rails)</a></td>
+                        <td><a href="#tdd">Test-Driven Development</a></td>
+                    </tr>
+                    
+                    <tr>
+                        <td><a href="#jsts">Difference b/w JavaScript and TypeScript</a></td>
+                        <td><a href="#nodeexpress">Difference b/w Node JS and Express JS</a></td>
+                        <td><a href="#devops">Devops</a></td>
+                        <td><a href="#deveopsjenkins">Setting up DevOps pipelines with Jenkins</a></td>
+                        <td><a href="#cicd">CI/CD Processes</a></td>
+                    </tr>
+
+
+                    <!-- third category -->
+                    <tr>
+                        <td colspan="6" style="font-weight: bolder; color: aliceblue; font-size: 25px;">Databases</td>
+                    </tr>
+
+                    <tr>
+                        <td><a href="#mongodb">MongoDB</a></td>
+                        <td><a href="#postgresql">PostgreSQL</a></td>
+                        <td><a href="#sqlserver">SQL Server</a></td>
+                        <td><a href="#mysql">My SQL</a></td>
+                        <td><a href="#nosql">No SQL</a></td>
+                    </tr>
+
+
+                    <!-- fourth category -->
+                    <tr>
+                        <td colspan="6" style="font-weight: bolder; color: aliceblue; font-size: 25px;">Testing</td>
+                    </tr>
+
+                    <tr>
+                        <td><a href="#junit">JUnit</a></td>
+                        <td><a href="#selenium">Selenium</a></td>
+                        <td><a href="#jasmine">Jasmine</a></td>
+                        <td><a href="#jest">Jest</a></td>
+                        <td><a href="#jaje">Difference between Jasmine and Jest</a></td>
+                        <td><a href="#mocha">Mocha</a></td>
+                    </tr>
+
+                    <!-- fifth category -->
+                    <tr>
+                        <td colspan="6" style="font-weight: bolder; color: aliceblue; font-size: 25px;">Cloud</td>
+                    </tr>
+
+                    <tr>
+                        <td><a href="#aws">AWS</a></td>
+                    </tr>
+
+
+                    <!-- sixth category -->
+                    <tr>
+                        <td colspan="6" style="font-weight: bolder; color: aliceblue; font-size: 25px;">Others</td>
+                    </tr>
+
+                    <tr>
+                        <td><a href="#sdlc">SDLC</a></td>
+                        <td><a href="#agile">Agile Development Process</a></td>
+                        <td><a href="#git">Git</a></td>
+                        <td><a href="#jira">JIRA</a></td>
+                        <td><a href="#java">Java</a></td>
+                        <td><a href="#python">Python</a></td>
+                    </tr>
+
+                </table>
+            </div>
+
         </div>
     </section>
 
