--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
                         <td><a href="#keys">Keys in React</a></td>
                         <td><a href="#lesssass">Less/Sass</a></td>
                         <td><a href="#spa">Single Page Applicatons(SPAs)</a></td>
+                        <td><a href="#vuejs">Vue.js</a></td>
                     </tr>
 
 
@@ -491,6 +492,18 @@
 
 
             </section>
+
+            <section id="vuejs">
+                <h3>Vue.js</h3>
+
+                Vue.js is a JavaScript framework that is used for building user interfaces and single-page applications.<br><br>
+
+                It is designed to be easy to understand and quick to get started with<br><br>
+
+                Vue.js focuses on the view layer of an application, providing tools for building reusable components that can be easily composed to create complex UIs. One of the key features of Vue.js is its reactivity system, which allows developers to create data-driven applications without having to write a lot of boilerplate code. <br><br>
+
+            </section>
+            
 
             <section id="expjs">
                 <h3>Express JS</h3>
